Fix z-index issue with button

--- a/resources/css/buttons.pcss
+++ b/resources/css/buttons.pcss
@@ -46,6 +46,7 @@
   bottom: 24px;
   right: 24px;
   transform: rotate(-90deg);
+  z-index: 1;
 }
 
 @media screen and (min-width: 60em) {
